--- a/Naïve Bayes Algorithm.ipynb
+++ b/Naïve Bayes Algorithm.ipynb
@@ -26,25 +26,36 @@
     "# What is Naïve Bayes Algorithm/Classifiers?\n",
     "\n",
     "\n",
-    "- The Naïve Bayes classifier is a supervised machine learning algorithm. which is used for classification tasks, such as text classification.\n",
+    "- The Naïve Bayes Algorithm/Classifiers is a supervised machine learning algorithm, Which is based on Bayes theorem and used for classification Problems/tasks. \n",
     "\n",
+    "- It is mainly used in text classification that including a high-dimensional traning dataset.\n",
     "\n",
-    "- Naive Bayes is a classification technique based on Bayes’ Theorem with an assumption that all the features that predict the target value are independent of each other.\n",
+    "- Naïve Bayes Classifiers is one of the simple and most effective Classification algorithm, Which helps in building the fast machine learning models that can be make quick prediction.\n",
     "\n",
-    "\n",
-    "- It calculates each class's probability and then picks the one with the highest probability.\n",
-    "\n",
-    "\n",
-    "- Naive Bayes With “naive” assumption of independence among predictors\n",
-    "\n",
+    "- It is a probabilistic Classifiers, which means it predicts the basis of the probability of an object.\n",
     "\n",
     "- It works with huge data and is mostly used to solve text kinds of data.\n",
     "\n",
-    "\n",
-    "Examples: Email classification, Twitter sentiment analysis, etc.\n",
+    "- Some popular examples of Naïve Bayes Algorithm are Spam filtration, Sentiment analysis and Classifying articles.\n",
     "\n",
     "\n",
     "![image.png](attachment:image.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9484f4d",
+   "metadata": {},
+   "source": [
+    "# Why it is Called Naive Bayes?\n",
+    "\n",
+    "The Naive Bayes algorithem is comprised of two words \"Naive\" and \"Bayes\" , Which can be describe as:\n",
+    "\n",
+    "- \"Naive\"-: It is called Naive because it assumes that the occurrence of a certain feature is independent of the occurrence of other features. Such as if the fruit is idetified on the bases of color,shape, and taste , then red, spherical and sweet fruit is recognized as an applre. \n",
+    "                          \n",
+    "     Hence each feature individually contributes to identify that is an apple without depending on each other. \n",
+    "                          \n",
+    "- \"Bayes\"-: It is called Bayes because it depends on the Principle of Bayes' Theorem."
    ]
   },
   {
@@ -61,6 +72,8 @@
    "metadata": {},
    "source": [
     "# Baye’s Theorem:\n",
+    "\n",
+    "-*** Bayes' Theorem is also know as Bayes' Rule or Bayes' law, Which   is used to determine the probability of a hypothesis with prior knowledge. It depends on the conditional probability \n",
     "\n",
     "![image.png](attachment:image.png)\n",
     "\n",
@@ -109,9 +122,9 @@
    "id": "1ac4ef4f",
    "metadata": {},
    "source": [
-    "# Steps:\n",
+    "# Working of Naive Bayes Classifire Steps:\n",
     "\n",
-    "1. Convert the data set into a frequency table.\n",
+    "1. Convert the given dataset into a frequency table.\n",
     "\n",
     "\n",
     "2. Create a Likelihood table by finding the probabilities like Overcast probability = 0.29 and probability of playing is 0.64.\n",
