--- a/Random Forest Algorithms.ipynb
+++ b/Random Forest Algorithms.ipynb
@@ -15,6 +15,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bb598325",
+   "metadata": {},
+   "source": [
+    "# Why Use Random Forest?\n",
+    "\n",
+    "● It takes less training time as compared to other algorithem.\n",
+    "\n",
+    "● It predicts output with high accuracy, even for the large dataset it runs efficiently.\n",
+    "\n",
+    "● It can also maintain accuracy when a large propotion of data is missing."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "fac7cc42",
    "metadata": {},
    "source": [
@@ -35,7 +49,9 @@
     "\n",
     "● It can be used for both Classification as well as  Regression problems in ML. \n",
     "\n",
-    "● It is based on the concept of ensemble learning, which is a process of combining multiple classifiers to solve a complex problem and improve the model's performance.\n",
+    "● It is based on the concept of ensemble learning, which is a process of combining multiple classifiers to solve a complex problem and improve the performance of the model's.\n",
+    "\n",
+    "● The greter number of tree in the forest leads to higher accuracy and prevent the problem of overfitting. \n",
     "\n",
     "● Random Forest is an ensemble learning method combining bagging principles and decision trees.\n",
     "\n",
