--- a/Support Vector Machine Algorithm (SVM’s).ipynb
+++ b/Support Vector Machine Algorithm (SVM’s).ipynb
@@ -18,21 +18,17 @@
    "id": "80cf0a01",
    "metadata": {},
    "source": [
-    "● Support Vector Machine or SVM  is one of the most popular machine learning algorithm that belongs to the supervised learning technique.\n",
-    "\n",
+    "● Support Vector Machine or SVM  is one of the most popular machine learning algorithm, that belongs to the supervised learning technique\n",
     "\n",
     "● SVM It can be used for both Classification as well as Regression problems in ML. However, primarily, it is used for Classification problems in Machine Learning.\n",
     "\n",
+    "● The goal of the SVM algorithm is to create the best line or decision boundary that can segregate n-dimensional space into classes so that we can easily put the new data point in the correct category in the future. This best decision boundary is called a hyperplane.\n",
     "\n",
     "● Support Vector Machine (SVM) is a powerful machine learning algorithm used for linear or nonlinear classification, regression, and even outlier detection tasks.\n",
     "\n",
-    "\n",
     "● SVMs can be used for a variety of tasks, such as text classification, image classification, spam detection, handwriting identification, gene expression analysis, face detection, and anomaly detection. \n",
     "\n",
-    "\n",
-    "●  SVMs are adaptable and efficient in a variety of applications because they can manage high-dimensional data and nonlinear relationships.\n",
-    "\n",
-    "●  The goal of the SVM algorithm is to create the best line or decision boundary that can segregate n-dimensional space into classes so that we can easily put the new data point in the correct category in the future. This best decision boundary is called a hyperplane.\n"
+    "●  SVMs are adaptable and efficient in a variety of applications because they can manage high-dimensional data and nonlinear relationships.\n"
    ]
   },
   {
