--- a/Decision Tree  Algorithm.ipynb
+++ b/Decision Tree  Algorithm.ipynb
@@ -31,7 +31,7 @@
    "id": "732f1a34",
    "metadata": {},
    "source": [
-    "● Decision Tree is a most Popular machine letrning algorithm that belongs to the Supervised learning technique.\n",
+    "● Decision Tree is one of the most Popular machine lerning algorithm, that belongs to the Supervised learning technique.\n",
     "\n",
     "● Decision Tree is a that can be used for both classification as well as Regression problems, but mostly it is preferred for solving Classification problems. \n",
     "\n",
@@ -39,25 +39,17 @@
     "\n",
     "● Decision Tree is are non-Parametric, which means they are do not make and assumptions about the distribution of the data.\n",
     "\n",
-    "● In a Decision tree, there are two nodes, which are the Decision Node and\n",
-    "Leaf Node. Decision nodes are used to make any decision and have multiple\n",
-    "branches, whereas Leaf nodes are the output of those decisions and do not\n",
-    "contain any further branches.\n",
+    "● In a Decision tree, there are two nodes, which are the Decision Node and Leaf Node. Decision nodes are used to make any decision and have multiple branches, whereas Leaf nodes are the output of those decisions and do not contain any further branches.\n",
     "\n",
-    "● The decisions or the test are performed on the basis of features of the given\n",
-    "dataset.\n",
+    "● The decisions or the test are performed on the basis of features of the given dataset.\n",
     "\n",
-    "● It is a graphical representation for getting all the possible solutions to a\n",
-    "problem/decision based on given conditions.\n",
+    "● A decision tree simply asks a question, and based on the answer (Yes/No), it further split the tree into subtrees.\n",
     "\n",
-    "● It is called a decision tree because, similar to a tree, it starts with the root\n",
-    "node, which expands on further branches and constructs a tree-like structure.\n",
+    "● It is a graphical representation for getting all the possible solutions to a problem/decision based on given conditions.\n",
     "\n",
-    "● In order to build a tree, we use the CART algorithm, which stands for\n",
-    "Classification and Regression Tree algorithm.\n",
+    "● It is called a decision tree because, similar to a tree, it starts with the root node, which expands on further branches and constructs a tree-like structure.\n",
     "\n",
-    "● A decision tree simply asks a question, and based on the answer (Yes/No), it\n",
-    "further split the tree into subtrees.\n",
+    "● In order to build a tree, we use the CART algorithm, which stands for Classification and Regression Tree algorithm.\n",
     "\n",
     "● Below diagram explains the general structure of a decision tree\n",
     "\n",
@@ -69,7 +61,7 @@
    "id": "580bb284",
    "metadata": {},
    "source": [
-    "# Why Decision trees?"
+    "# Why  use Decision Trees?"
    ]
   },
   {
@@ -82,13 +74,14 @@
    "id": "62a66106",
    "metadata": {},
    "source": [
+    "- Decision trees often/Usually mimic Human-level thinking ability while makinh decision, So it is a easy understand.\n",
+    "\n",
+    "- The logic behind the decision tree can be easily understand because it shows a tree-like structure.\n",
+    "\n",
     "We have a couple of other algorithms there, so why do we have to choose Decision trees??\n",
     "\n",
     "well, there might be many reasons but I believe a few which are\n",
     "\n",
-    "Decision trees often mimic human-level thinking so it's so simple to understand the data and make some good interpretations.\n",
-    "\n",
-    "Decision trees make you see the logic for the data to interpret(not like black box algorithms like SVM, etc..)\n",
     "\n",
     "![image.png](attachment:image.png)\n",
     "\n",
